--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ git = "https://github.com/bjz/glfw-rs.git"
 default-features = false
 
 [dependencies]
-fbxcel-dom = "0.0.3"
+fbxcel-dom = "0.0.4"
 cgmath = "0.14.1"
 gl = "0.6.2"
 image = "0.14.0"
@@ -28,3 +28,4 @@ rusttype = "0.3.0"
 unicode-normalization = "0.1.0"
 simplelog = "0.7.4"
 log = "0.4.8"
+approx = "0.3.2"
