--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ path = "src/lib/lib.rs"
 name = "bin"
 path = "src/app/bin.rs"
 
-[dependencies.glfw]
+[target.'cfg(windows)'.dependencies.glfw]
 version = "0.34.0"
 git = "https://github.com/bjz/glfw-rs.git"
 default-features = false
+
+[target.'cfg(unix)'.dependencies.glfw]
+version = "0.34.0"
+git = "https://github.com/bjz/glfw-rs.git"
 
 [dependencies]
 fbxcel-dom = "0.0.4"
