--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ git = "https://github.com/bjz/glfw-rs.git"
 fbxcel-dom = "0.0.4"
 cgmath = "0.14.1"
 gl = "0.6.2"
-image = "0.14.0"
+image = "0.23.0-preview.0"
 time = "0.1"
 rand = "0.3"
 rodio = "0.5.2"
