--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "alers"
 version = "0.1.0"
 authors = ["Alether <gotenwinz99@gmail.com>"]
+edition = "2018"
 
 [lib]
 name = "alers"
@@ -19,6 +20,10 @@ default-features = false
 [target.'cfg(unix)'.dependencies.glfw]
 version = "0.34.0"
 git = "https://github.com/bjz/glfw-rs.git"
+
+[dependencies.async-std]
+version = "1.0.0"
+features = ["attributes"]
 
 [dependencies]
 fbxcel-dom = "0.0.4"
