--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ version = "0.15"
 features = ["extras", "names"]
 
 [dependencies]
+ale_gltf = { path = "crates/ale_gltf" }
+ale_mesh = { path = "crates/ale_mesh" }
+ale_autoid = { path = "crates/ale_autoid" }
+ale_math = { path = "crates/ale_math" }
 fbxcel-dom = "0.0.4"
 cgmath = "0.17.0"
 gl = "0.6.2"
@@ -42,6 +46,5 @@ unicode-normalization = "0.1.0"
 simplelog = "0.7.4"
 log = "0.4.8"
 approx = "0.3.2"
-snowflake = "1.2"
 bitflags = "1.2.1"
 hdrldr = "0.1"
