--- a/crates/ale_texture/Cargo.toml
+++ b/crates/ale_texture/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ale_opengl"
+name = "ale_texture"
 version = "0.1.0"
 authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_font = { path = "../ale_font" }
-ale_math = { path = "../ale_math" }
-ale_mesh = { path = "../ale_mesh" }
-ale_texture = { path = "../ale_texture" }
-gl = "0.6.2"
+ale_autoid = { path = "../ale_autoid" }
+hdrldr = "0.1"
+image = "0.23.*"
