--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ ale_camera = { path = "crates/ale_camera" }
 ale_shader = { path = "crates/ale_shader" }
 ale_input = { path = "crates/ale_input" }
 ale_console = { path = "crates/ale_console" }
+ale_variable = { path = "crates/ale_variable" }
+ale_opengl_fxaa = { path = "crates/ale_opengl_fxaa" }
 fbxcel-dom = "0.0.4"
 cgmath = "0.17.0"
 time = "0.1"
