--- a/crates/ale_opengl/Cargo.toml
+++ b/crates/ale_opengl/Cargo.toml
@@ -14,4 +14,5 @@ ale_texture = { path = "../ale_texture" }
 ale_shader = { path = "../ale_shader" }
 ale_camera = { path = "../ale_camera" }
 ale_console = { path = "../ale_console" }
+ale_variable = { path = "../ale_variable" }
 gl = "0.6.2"
