--- a/crates/ale_opengl/Cargo.toml
+++ b/crates/ale_opengl/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ale_autoid = { path = "../ale_autoid" }
 ale_font = { path = "../ale_font" }
 ale_math = { path = "../ale_math" }
 ale_mesh = { path = "../ale_mesh" }
