--- a/examples/complete/Cargo.toml
+++ b/examples/complete/Cargo.toml
@@ -23,3 +23,4 @@ ale_app = { path = "../../crates/ale_app" }
 ale_glfw = { path = "../../crates/ale_glfw" }
 ale_opengl_pbr = { path = "../../crates/ale_opengl_pbr" }
 ale_resource = { path = "../../crates/ale_resource" }
+ale_ecs = { path = "../../crates/ale_ecs" }
