--- a/crates/ale_opengl_envmap/Cargo.toml
+++ b/crates/ale_opengl_envmap/Cargo.toml
@@ -13,3 +13,4 @@ ale_mesh = { path = "../../crates/ale_mesh" }
 ale_shader = { path = "../../crates/ale_shader" }
 ale_texture = { path = "../../crates/ale_texture" }
 ale_camera = { path = "../../crates/ale_camera" }
+ale_resource = { path = "../../crates/ale_resource" }
