--- a/crates/ale_opengl_fxaa/Cargo.toml
+++ b/crates/ale_opengl_fxaa/Cargo.toml
@@ -11,3 +11,4 @@ ale_console = { path = "../ale_console" }
 ale_variable = { path = "../ale_variable" }
 ale_opengl = { path = "../ale_opengl" }
 ale_shader = { path = "../ale_shader" }
+ale_resource = { path = "../ale_resource" }
