--- a/examples/sdf/Cargo.toml
+++ b/examples/sdf/Cargo.toml
@@ -14,3 +14,4 @@ ale_opengl = { path = "../../crates/ale_opengl" }
 ale_input = { path = "../../crates/ale_input" }
 ale_gltf = { path = "../../crates/ale_gltf" }
 ale_camera = { path = "../../crates/ale_camera" }
+ale_texture = { path = "../../crates/ale_texture" }
