--- a/crates/ale_buffer/Cargo.toml
+++ b/crates/ale_buffer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ale_gltf"
+name = "ale_buffer"
 version = "0.1.0"
 authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
 edition = "2018"
@@ -7,10 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_buffer = { path = "../ale_buffer" }
-ale_mesh = { path = "../ale_mesh" }
 ale_math = { path = "../ale_math" }
-
-[dependencies.gltf]
-version = "0.15"
-features = ["extras", "names"]
