--- a/crates/ale_mesh/Cargo.toml
+++ b/crates/ale_mesh/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 ale_autoid = { path = "../ale_autoid" }
 ale_math = { path = "../ale_math" }
+ale_buffer = { path = "../ale_buffer" }
 rayon = "1.5.0"
 approx = "0.3.2"
