--- a/crates/ale_physics/Cargo.toml
+++ b/crates/ale_physics/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ale_raymarch"
+name = "ale_physics"
 version = "0.1.0"
 authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_mesh = { path = "../ale_mesh" }
-ale_texture = { path = "../ale_texture" }
-ale_camera = { path = "../ale_camera" }
-ale_math = { path = "../ale_math" }
+rapier3d = { version = "0.4.2", features = [ "simd-nightly", "parallel" ] }
