--- a/crates/ale_physics/Cargo.toml
+++ b/crates/ale_physics/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rapier3d = { version = "0.4.2", features = [ "simd-nightly", "parallel" ] }
+rapier3d = { version = "0.8.0", features = [ "simd-stable", "parallel" ] }
+ale_math = { path = "../ale_math" }
