--- a/examples/pong/Cargo.toml
+++ b/examples/pong/Cargo.toml
@@ -12,6 +12,7 @@ ale_mesh = { path = "../../crates/ale_mesh" }
 ale_opengl = { path = "../../crates/ale_opengl" }
 ale_math = { path = "../../crates/ale_math" }
 ale_physics = { path = "../../crates/ale_physics" }
+ale_gltf = { path = "../../crates/ale_gltf" }
 ale_camera = { path= "../../crates/ale_camera" }
 ale_input = { path= "../../crates/ale_input" }
 ale_texture = { path = "../../crates/ale_texture" }
