--- a/examples/gpu_sdf/Cargo.toml
+++ b/examples/gpu_sdf/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ale_app = { path = "../../crates/ale_app" }
+ale_math = { path = "../../crates/ale_math" }
+ale_mesh = { path = "../../crates/ale_mesh" }
+ale_opengl = { path = "../../crates/ale_opengl" }
+ale_input = { path = "../../crates/ale_input" }
+ale_gltf = { path = "../../crates/ale_gltf" }
+ale_camera = { path = "../../crates/ale_camera" }
+ale_texture = { path = "../../crates/ale_texture" }
+ale_raymarch = { path = "../../crates/ale_raymarch" }
