--- a/crates/ale_opengl/Cargo.toml
+++ b/crates/ale_opengl/Cargo.toml
@@ -7,16 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_autoid = { path = "../ale_autoid" }
-ale_font = { path = "../ale_font" }
+ale_resources = { path = "../ale_resources" }
 ale_math = { path = "../ale_math" }
-ale_mesh = { path = "../ale_mesh" }
-ale_texture = { path = "../ale_texture" }
-ale_shader = { path = "../ale_shader" }
 ale_camera = { path = "../ale_camera" }
 ale_console = { path = "../ale_console" }
 ale_variable = { path = "../ale_variable" }
 ale_input = { path = "../ale_input" }
-ale_buffer = { path = "../ale_buffer" }
-ale_render = { path = "../ale_render" }
 gl = "0.14.0"
