--- a/crates/ale_raymarch/Cargo.toml
+++ b/crates/ale_raymarch/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_mesh = { path = "../ale_mesh" }
-ale_texture = { path = "../ale_texture" }
+ale_resources = { path = "../ale_resources" }
 ale_camera = { path = "../ale_camera" }
 ale_math = { path = "../ale_math" }
