--- a/examples/sdf/Cargo.toml
+++ b/examples/sdf/Cargo.toml
@@ -9,10 +9,8 @@ edition = "2018"
 [dependencies]
 ale_app = { path = "../../crates/ale_app" }
 ale_math = { path = "../../crates/ale_math" }
-ale_mesh = { path = "../../crates/ale_mesh" }
 ale_opengl = { path = "../../crates/ale_opengl" }
 ale_input = { path = "../../crates/ale_input" }
-ale_gltf = { path = "../../crates/ale_gltf" }
 ale_camera = { path = "../../crates/ale_camera" }
-ale_texture = { path = "../../crates/ale_texture" }
 ale_raymarch = { path = "../../crates/ale_raymarch" }
+ale_resources = { path = "../../crates/ale_resources" }
