first ui element

--- a/crates/ale_opengl/Cargo.toml
+++ b/crates/ale_opengl/Cargo.toml
@@ -13,5 +13,6 @@ ale_camera = { path = "../ale_camera" }
 ale_console = { path = "../ale_console" }
 ale_variable = { path = "../ale_variable" }
 ale_input = { path = "../ale_input" }
+ale_data = { path = "../ale_data" }
 gl = "0.14.0"
 snowflake = "1.3.0"
