--- a/examples/ui/Cargo.toml
+++ b/examples/ui/Cargo.toml
@@ -11,3 +11,5 @@ ale_ui = { path = "../../crates/ale_ui" }
 ale_opengl = { path = "../../crates/ale_opengl" }
 ale_math = { path = "../../crates/ale_math" }
 ale_input = { path= "../../crates/ale_input" }
+ale_resources = { path= "../../crates/ale_resources" }
+ale_camera = { path= "../../crates/ale_camera" }
