--- a/crates/ale_resources/Cargo.toml
+++ b/crates/ale_resources/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ale_math = { path = "../../crates/ale_math" }
+ale_math = { path = "../ale_math" }
+ale_data = { path = "../ale_data" }
 snowflake = "1.3.0"
 approx = "0.5.1"
 rusttype = "0.9.2"
