--- a/crates/ale_ui/Cargo.toml
+++ b/crates/ale_ui/Cargo.toml
@@ -11,3 +11,4 @@ ale_data = { path = "../ale_data" }
 ale_opengl = { path = "../ale_opengl" }
 ale_resources = { path = "../ale_resources" }
 ale_camera = { path = "../ale_camera" }
+ale_input = { path = "../ale_input" }
