--- a/crates/ale_app/Cargo.toml
+++ b/crates/ale_app/Cargo.toml
@@ -20,3 +20,5 @@ ale_input = { path = "../ale_input" }
 ale_opengl = { path = "../ale_opengl" }
 simplelog = "0.7.4"
 log = "0.4.8"
+thiserror = "1.0"
+anyhow = "1.0"
