--- a/crates/ale_app/Cargo.toml
+++ b/crates/ale_app/Cargo.toml
@@ -18,6 +18,9 @@ git = "https://github.com/bjz/glfw-rs.git"
 ale_math = { path = "../ale_math" }
 ale_input = { path = "../ale_input" }
 ale_opengl = { path = "../ale_opengl" }
+ale_ui = { path = "../ale_ui" }
+ale_world = { path = "../ale_world" }
+ale_resources = { path = "../ale_resources" }
 simplelog = "0.7.4"
 log = "0.4.8"
 thiserror = "1.0"
