--- a/crates/ale_world/Cargo.toml
+++ b/crates/ale_world/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 ale_input = { path = "../ale_input" }
 hecs = "0.7.6"
-traitcast = "0.5.0"
-traitcast_core = "0.2.0"
 inventory = "0.1.*"
+
+[dependencies.traitcast_core]
+version = "0.2.0"
+use_inventory = false
