[WIP] before event producer & consumer, simplify id to alevec keys

--- a/examples/editor/Cargo.toml
+++ b/examples/editor/Cargo.toml
@@ -11,4 +11,8 @@ ale_resources = { path = "../../crates/ale_resources" }
 ale_world = { path = "../../crates/ale_world" }
 ale_math = { path = "../../crates/ale_math" }
 ale_input = { path = "../../crates/ale_input" }
-ale_ui = { path = "../../crates/ale_ui"}
+ale_ui = { path = "../../crates/ale_ui" }
+ale_opengl = { path = "../../crates/ale_opengl" }
+ale_camera = { path = "../../crates/ale_camera" }
+ale_window = { path = "../../crates/ale_window" }
+ale_data = { path = "../../crates/ale_data" }
