--- a/crates/ale_app/Cargo.toml
+++ b/crates/ale_app/Cargo.toml
@@ -4,16 +4,6 @@ version = "0.1.0"
 authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[target.'cfg(windows)'.dependencies.glfw]
-version = "0.44.0"
-git = "https://github.com/bjz/glfw-rs.git"
-default-features = false
-
-[target.'cfg(unix)'.dependencies.glfw]
-version = "0.44.0"
-git = "https://github.com/bjz/glfw-rs.git"
-
 [dependencies]
 ale_math = { path = "../ale_math" }
 ale_input = { path = "../ale_input" }
@@ -21,6 +11,7 @@ ale_opengl = { path = "../ale_opengl" }
 ale_ui = { path = "../ale_ui" }
 ale_world = { path = "../ale_world" }
 ale_resources = { path = "../ale_resources" }
+ale_window = { path = "../ale_window" }
 simplelog = "0.7.4"
 log = "0.4.8"
 thiserror = "1.0"
