--- a/examples/sdf/Cargo.toml
+++ b/examples/sdf/Cargo.toml
@@ -14,3 +14,4 @@ ale_input = { path = "../../crates/ale_input" }
 ale_camera = { path = "../../crates/ale_camera" }
 ale_raymarch = { path = "../../crates/ale_raymarch" }
 ale_resources = { path = "../../crates/ale_resources" }
+ale_window = { path = "../../crates/ale_window" }
