--- a/examples/ui/Cargo.toml
+++ b/examples/ui/Cargo.toml
@@ -14,3 +14,4 @@ ale_input = { path= "../../crates/ale_input" }
 ale_resources = { path= "../../crates/ale_resources" }
 ale_camera = { path= "../../crates/ale_camera" }
 ale_data = { path= "../../crates/ale_data" }
+ale_window = { path = "../../crates/ale_window" }
