--- a/crates/ale_app/Cargo.toml
+++ b/crates/ale_app/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2018"
 [dependencies]
 ale_math = { path = "../ale_math" }
 ale_input = { path = "../ale_input" }
+ale_data = { path = "../ale_data" }
 ale_opengl = { path = "../ale_opengl" }
 ale_ui = { path = "../ale_ui" }
 ale_world = { path = "../ale_world" }
 ale_resources = { path = "../ale_resources" }
 ale_window = { path = "../ale_window" }
+ale_camera = { path = "../ale_camera" }
 simplelog = "0.7.4"
 log = "0.4.8"
 thiserror = "1.0"
