--- a/examples/editor/Cargo.toml
+++ b/examples/editor/Cargo.toml
@@ -16,3 +16,4 @@ ale_opengl = { path = "../../crates/ale_opengl" }
 ale_camera = { path = "../../crates/ale_camera" }
 ale_window = { path = "../../crates/ale_window" }
 ale_data = { path = "../../crates/ale_data" }
+log = "0.4.17"
