--- a/crates/ale_world/Cargo.toml
+++ b/crates/ale_world/Cargo.toml
@@ -11,6 +11,7 @@ ale_camera = { path = "../ale_camera" }
 ale_opengl = { path = "../ale_opengl" }
 ale_data = { path = "../ale_data" }
 downcast-rs = "1.2.0"
+anyhow = "1.0.58"
 
 [dependencies.traitcast_core]
 version = "0.2.0"
