--- a/crates/ale_world/Cargo.toml
+++ b/crates/ale_world/Cargo.toml
@@ -12,6 +12,7 @@ ale_opengl = { path = "../ale_opengl" }
 ale_data = { path = "../ale_data" }
 downcast-rs = "1.2.0"
 anyhow = "1.0.58"
+bus = "2.3.0"
 
 [dependencies.traitcast_core]
 version = "0.2.0"
