setup rust nightly

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-rust@v1
+        with:
+          rust-version: nightly
     - name: Update
       run: sudo apt-get update
     - name: Setup
