--- a/crates/ale_data/Cargo.toml
+++ b/crates/ale_data/Cargo.toml
@@ -11,3 +11,7 @@ snowflake = "1.3.0"
 lazy_static = "1.4.0"
 indexmap = "1.9.1"
 crossbeam-channel = "0.5.6"
+
+[dependencies.traitcast_core]
+version = "0.2.0"
+use_inventory = false
