--- a/examples/tetris/Cargo.toml
+++ b/examples/tetris/Cargo.toml
@@ -16,6 +16,7 @@ ale_opengl = { path = "../../crates/ale_opengl" }
 ale_camera = { path = "../../crates/ale_camera" }
 ale_window = { path = "../../crates/ale_window" }
 ale_data = { path = "../../crates/ale_data" }
+ale_render = { path = "../../crates/ale_render" }
 lazy_static = "1.4.0"
 log = "0.4.17"
 rand = "0.8.5"
