--- a/examples/tetris/Cargo.toml
+++ b/examples/tetris/Cargo.toml
@@ -14,7 +14,7 @@ ale_input = { path = "../../crates/ale_input" }
 ale_ui = { path = "../../crates/ale_ui" }
 ale_opengl = { path = "../../crates/ale_opengl" }
 ale_camera = { path = "../../crates/ale_camera" }
-ale_window = { path = "../../crates/ale_window" }
+ale_window_winit = { path = "../../crates/ale_window_winit" }
 ale_data = { path = "../../crates/ale_data" }
 ale_render = { path = "../../crates/ale_render" }
 lazy_static = "1.4.0"
