--- a/crates/ale_app/Cargo.toml
+++ b/crates/ale_app/Cargo.toml
@@ -10,6 +10,7 @@ ale_input = { path = "../ale_input" }
 ale_data = { path = "../ale_data" }
 ale_opengl = { path = "../ale_opengl" }
 ale_window_winit = { path = "../ale_window_winit" }
+ale_wgpu = { path = "../ale_wgpu" }
 ale_ui = { path = "../ale_ui" }
 ale_world = { path = "../ale_world" }
 ale_resources = { path = "../ale_resources" }
